# vine-substrate

./: .gitignore  Cargo.toml
.github/workflows/: monthly-tag.yml
client/authority-discovery/: Cargo.toml
client/basic-authorship/: Cargo.toml
client/beefy/: Cargo.toml
client/cli/: Cargo.toml
client/consensus/babe/src/: lib.rs
client/consensus/common/: Cargo.toml
client/consensus/pow/: Cargo.toml
client/consensus/slots/: Cargo.toml
client/db/: Cargo.toml
client/db/benches/: state_access.rs
client/finality-grandpa/: Cargo.toml
client/informant/: Cargo.toml
client/network/: Cargo.toml
client/network-gossip/: Cargo.toml
client/network/common/: Cargo.toml
client/network/test/: Cargo.toml
client/offchain/: Cargo.toml
client/service/: Cargo.toml
client/sysinfo/: Cargo.toml
client/transaction-pool/: Cargo.toml
client/utils/: Cargo.toml
docs/: README.adoc
evm-client/cli/: Cargo.toml
evm-client/cli/src/frontier_db_cmd/: meta_db.rs  tests.rs
evm-client/consensus/: Cargo.toml
evm-client/db/: Cargo.toml
evm-client/db/src/: lib.rs  upgrade.rs  utils.rs
evm-client/mapping-sync/: Cargo.toml
evm-client/rpc/: Cargo.toml
evm-client/rpc/src/eth/: client.rs  execute.rs  filter.rs  mod.rs  submit.rs
evm-frame/base-fee/: Cargo.toml
evm-frame/dynamic-fee/: Cargo.toml
evm-frame/ethereum/: Cargo.toml
evm-frame/evm/: Cargo.toml
evm-frame/evm/precompile/blake2/: Cargo.toml
evm-frame/evm/precompile/blake2/src/: lib.rs
evm-frame/evm/precompile/bn128/: Cargo.toml
evm-frame/evm/precompile/bn128/src/: lib.rs
evm-frame/evm/precompile/curve25519/: Cargo.toml
evm-frame/evm/precompile/curve25519/src/: lib.rs
evm-frame/evm/precompile/dispatch/: Cargo.toml
evm-frame/evm/precompile/dispatch/src/: lib.rs  tests.rs
evm-frame/evm/precompile/ed25519/: Cargo.toml
evm-frame/evm/precompile/ed25519/src/: lib.rs
evm-frame/evm/precompile/modexp/: Cargo.toml
evm-frame/evm/precompile/sha3fips/: Cargo.toml
evm-frame/evm/precompile/simple/: Cargo.toml
evm-frame/evm/src/: lib.rs
evm-frame/evm/test-vector-support/: Cargo.toml
evm-frame/hotfix-sufficients/: Cargo.toml
evm-primitives/consensus/: Cargo.toml
evm-primitives/dynamic-fee/: Cargo.toml
evm-primitives/ethereum/: Cargo.toml
evm-primitives/evm/: Cargo.toml
evm-primitives/rpc/: Cargo.toml
evm-primitives/self-contained/: Cargo.toml
frame/babe/src/: lib.rs
frame/contracts/: Cargo.toml
frame/contracts/primitives/: Cargo.toml
frame/staking/: Cargo.toml
frame/staking/reward-curve/: Cargo.toml
frame/staking/reward-curve/src/: lib.rs
frame/staking/src/: inflation.rs  lib.rs
frame/staking/src/pallet/: impls.rs  mod.rs
frame/support/: Cargo.toml
primitives/consensus/common/: Cargo.toml
primitives/core/: Cargo.toml
primitives/runtime/src/: curve.rs
primitives/timestamp/: Cargo.toml
scripts/ci/gitlab/pipeline/: test.yml
utils/frame/generate-bags/node-runtime/: Cargo.toml
utils/frame/generate-bags/node-runtime/src/: main.rs
utils/frame/try-runtime/cli/src/: lib.rs
utils/wasm-builder/src/: lib.rs
