[package]
name = "fc-cli"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Frontier CLI interface"
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.1", features = ["derive", "deprecated"] }
ethereum-types = { version = "0.14.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Substrate
sc-cli = { version = "0.10.0-dev",path = "../../client/cli"  }
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../primitives/api" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
# Frontier
fc-db = { path = "../db" }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }

[dev-dependencies]
futures = "0.3.21"
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
tempfile = "3.3.0"
# Substrate
sc-block-builder = { version = "0.10.0-dev", path = "../../client/block-builder"}
sc-client-db = { version = "0.10.0-dev", default-features = false, path = "../../client/db" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sp-io = { version = "7.0.0", default-features = false, path = "../../primitives/io" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
# Frontier
node-peer-runtime = { version = "3.0.0-dev", path = "../../bin/node/runtime" }
