[package]
name = "fc-consensus"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Frontier consensus for substrate."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
# Substrate
sc-client-api = { version = "4.0.0-dev", path = "../../client/api" }
sc-consensus = { version = "0.10.0-dev", path = "../../client/consensus/common" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" }
sp-block-builder = { version = "4.0.0-dev", path = "../../primitives/block-builder" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }

# Frontier
fc-db = { path = "../db" }

fp-consensus = { version = "2.0.0-dev", path = "../../evm-primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../evm-primitives/rpc" }
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }
