[package]
name = "fc-db"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
description = "Frontier database backend."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
kvdb-rocksdb = { version = "0.17.0", optional = true }
log = "0.4.17"
parity-db = { version = "0.4.2", optional = true }
parking_lot = "0.12.1"
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
smallvec = "1.10"
# Substrate
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" }
sc-client-db = { version = "0.10.0-dev", path = "../../client/db" }
sp-core = { version = "7.0.0", path = "../../primitives/core" }
sp-database = { version = "4.0.0-dev", path = "../../primitives/database" }
sp-runtime = { version = "7.0.0", path = "../../primitives/runtime" }
# Frontier
fp-storage = { version = "2.0.0", path = "../../evm-primitives/storage" }

[features]
default = ["kvdb-rocksdb", "parity-db"]

[dev-dependencies]
futures = "0.3.25"
tempfile = "3.3.0"
# Substrate
sc-block-builder = { version = "0.10.0-dev", path = "../../client/block-builder" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
