[package]
name = "pallet-base-fee"
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"
description = "EIP-1559 fee utils."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
# Substrate
sp-core = { version = "7.0.0", path = "../../primitives/core", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime"}
# Substrate FRAME
frame-support = { version = "4.0.0-dev", path = "../../frame/support" , default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }
# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../evm-primitives/evm", default-features = false }

[dev-dependencies]
# Substrate
sp-io = { version = "7.0.0", path = "../../primitives/io", default-features = false}

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	# Frontier
	"fp-evm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
