[package]
name = "pallet-hotfix-sufficients"
version = "1.0.0"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
description = "Hotfix zero-value account sufficients with non-zero-value nonces."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
# Substrate
sp-core = { version = "7.0.0", path = "../../primitives/core", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime"}
sp-std = { version = "5.0.0",path = "../../primitives/std", default-features = false }
# Substrate FRAME
frame-benchmarking = { version = "4.0.0-dev",  default-features = false, path = "../../frame/benchmarking", optional = true }

frame-support = { version = "4.0.0-dev", path = "../../frame/support" , default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }

# Frontier
pallet-evm = {version="6.0.0-dev", path = "../evm", default-features = false }

[dev-dependencies]
# Substrate
sp-io = { version = "7.0.0", path = "../../primitives/io", default-features = false}

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# Frontier
	"pallet-evm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-evm/try-runtime",
]
