[package]
name = "fp-consensus"
version = "2.0.0-dev"
license = "Apache-2.0"
edition = "2021"
description = "Primitives for Frontier consensus."
 
[dependencies]
ethereum = { version = "0.14.0", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
# Substrate
sp-core = { version = "7.0.0", path = "../../primitives/core", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "5.0.0",path = "../../primitives/std", default-features = false }
	
[features]
default = ["std"]
std = [
	"ethereum/std",
	"scale-codec/std",
	# Substrate
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
