[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
license = "Apache-2.0"
edition = "2021"
description = "Test vector support for EVM pallet."
 
[dependencies]
evm = { version = "0.37.0", default-features = false }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Substrate
sp-core = { version = "7.0.0", path = "../../../primitives/core", default-features = false }
# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../../evm-primitives/evm", default-features = false }

[features]
default = ["std"]
std = [
    "fp-evm/std"
]